style.css
/* ... */
.home-pricing{
    background-image: url(icons/bg-curve.png);   
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.home-container{
    text-align: center;
    margin-top: 100px;
}
.home-desc p{
    margin: auto;
    width: 40%;
    align-self: flex-start;
    font-style: oblique;
    color: rgb(17, 19, 27);
    line-height: 29px;
}
.title-princing {
    padding-left: 50px;
    margin-bottom: 10px;
    font-weight:bolder;
    font-size: 2.5rem;
}
.price-tag .p1{
    color: rgba(34, 47, 101, 1);
    padding-left: 50px;
    margin-bottom: 10px;
    margin-top: 30px;
    font-weight:bolder;
    font-size: 2.5rem;
}
.price-tag .p2{
    color: rgba(34, 47, 101, 1);
    padding-left: 45px;
    margin-bottom: 10px;
    margin-top: 20px;
}
.extra-info p{
    color: rgb(0, 0, 0);
    padding-left: 45px;
    margin-bottom: 10px;
    margin-top: 50px;
    margin-left: 30px;
}
.button-price button{
    background-color: rgba(17, 27, 71, 1);
    color: aliceblue;
    margin-top: 55px;
    width: 150px;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 20px;    
    transition: 1s;
    margin-left: 87px;
}
.button-price button:hover{
    cursor: pointer;
    background-color:  rgba(25, 36, 84, 0.902);
    font-size: 15px;
}
/*Contact style start from here*/
.contact-title{
    padding-left: 50px;
    margin-bottom: 10px;
    font-weight:bolder;
    font-size: 1.5rem;
   
}
.contact-title h1{
    margin: 30px;
    text-align: center;
}
.contact-container{
    display: flex;
    width: 80%;
    margin: auto;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; 
    border-radius: 10px;
}
.contact-container .sidebar{
    width: 40%;
    background-color: rgba(242, 245, 255, 1);
    border-radius: 10px;
}
 .sidebar-title{

    padding-left: 40px;
    padding-top: 50px;
    font-weight:bolder;
    font-size: 2.2rem;
}
.sidebar-subtitle{
    padding-left: 50px;
    margin: 15px;
    font-weight:normal;
    font-size: 1.1rem;
}
.personal-info{
    margin-top: 100px;
}
.personal-info .email ,.personal-info .phone,.personal-info .localisation{
display: flex;
margin-left: 40px;
}
.personal-info .email,.personal-info .phone, .personal-info .localisation{
    margin-bottom: 30px;
    padding-bottom: 50px;
}
.personal-info p{
    margin-left: 5px;
}
.contact-form{
    display: flex;
    flex-direction: column;
    margin: auto;
}
.contact-form label{
    color: rgb(132, 122, 122);
    font-style: initial;
    line-height: 20px;
}
.contact-form input{
  border: none;
  border-bottom: 2px solid rgb(183, 171, 171);
  height: 30px;
}
.contact-form input:focus{
  outline: none;
}

.first-name,.last-name{
    margin-bottom: 50px;
    margin-right: 60px;
}
.email, .phone{
    margin-bottom: 50px;
    margin-right: 60px;
    margin-top: 40px;
}
.contact-area{
    width: 90%;
    border: none;
    outline: none;
    border-bottom: 2px solid rgb(183, 171, 171);
    margin-top: 10px;
}
.contact-btn button{
    margin-top: 40px;
    margin-left: 330px;
    background-color: rgb(0, 0, 0);
    width: 120px;
    height: 50px;
    color: beige;
    border-radius: 10px;
    box-shadow: 7px 5px 5px rgb(146, 140, 140);
    transition: 0.5s;
    font-size: 13px;
}
.contact-btn button:hover{
    cursor: pointer;
    background-color:  rgba(10, 11, 11, 0.902);
    font-size: 14px;
}
/*Product style start from here*/
.product-container{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 40px;
    flex-direction: column;
}
.product-card{
    display: flex;
    flex-direction: column;
    width: 280px;
    height: 450px;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
    border-radius: 20px;
    margin-right: 50px;
    flex-wrap: wrap;
}

.product-card img{
    width: 100%;
}
.ptoduit-title{
    font-weight: bolder;
    font-size: larger;
    color: rgb(44, 43, 43);
    margin: 10px;
    align-self: center;
}
.product-description{
    margin: 10px;
}
.card-group1,.card-group2{
    display: flex;
    margin-bottom: 40px;
}
.product-btn{
    background-color: rgba(17, 27, 71, 1);
    color: aliceblue;
    width: 150px;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 20px;
    transition: 1s;
    align-self: center;
}

/*-------------*/
.fa-cart-plus{
    background:#0652DD;
  }
  
  .addtocart{
    display:block;
    padding:5px;
    border-radius:100px;
    border:none;
    font-size:10px;
    position:relative;
    background:#0652DD;
    cursor:pointer;
    height:40px;
    width:150px;
    overflow:hidden;
    transition:transform 0.1s;
    z-index:1;
    align-self: center;
  }
  .addtocart:hover{
    transform:scale(1.1);
  }
  .pretext{
    color:#fff;
    background:#0652DD;
    height:100%;
    width:100%;
    display:flex;
    justify-content:center;
    align-items:center;
  }
  .pretext a{
    color:#fff;
    background:#0652DD;
    height:100%;
    width:100%;
    display:flex;
    justify-content:center;
    align-items:center;
    text-decoration: none;
  }
  i{
    margin-right:10px;
  }
  /*Dark mode classes start from here*/
  .dark-mode {
    background-color: black;
    color: white;
  }
  .dark-header{
    color: #fff;
    background-color: black;
 }
  .footer-dark{
    background-color: black;
    color: #fff;
  }
  .white-text{
    color: white !important;
  }
  .sidebar-contact{
    background-color: #000;
  }
.test{
color: rgb(0, 0, 0);
}
/*..........................*/
.checkbox {
    opacity: 0;
    position: absolute;
  }
  
  .checkbox-label {
    background-color: #111;
    width: 50px;
    height: 26px;
    border-radius: 50px;
    position: relative;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  
  .fa-moon {color: #f1c40f;}
  
  .fa-sun {color: #f39c12;}
/* ... */

